<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <plurals name="NNNtrackstoplaylist">
        <item quantity="one">1 song added to playlist.</item>
        <item quantity="other"><xliff:g example="27" id="number">%d</xliff:g> songs added to playlist.</item>
    </plurals>
    <string-array name="fragments_titles">
        <item>ALBUMS</item>
        <item>ARTISTS</item>
        <item>SONGS</item>
        <item>GENRES</item>
        <item>PLAYLISTS</item>
        <item>DIRECTORY</item>
    </string-array>
    <string-array name="fragments_titles_number">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="scan_frequency_entries">
        <item>Scan at every startup</item>
        <item>Scan at every 3 startups</item>
        <item>Scan at every 5 startups</item>
        <item>Scan at every 10 startups</item>
        <item>Scan at every 20 startups</item>
        <item>Scan manually</item>
    </string-array>
    <string-array name="scan_frequency_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="app_name" translatable="false">Boom</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="ok_caps" translatable="false">OK</string>
    <string name="cancel_caps" translatable="false">CANCEL</string>
    <string name="overwrite" translatable="false">Overwrite</string>
    <string name="new_playlist">New Playlist</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="ringtone_menu">Use As Ringtone</string>
    <string name="ringtone_set"> has been set as your ringtone.</string>
    <string name="delete_song_desc">Permanently delete </string>
    <string name="delete_song_desc_nosdcard">Permanently delete</string>
    <string name="add_to_queue">Add To Queue</string>
    <string name="play_next">Play Next</string>
    <string name="remove">Remove</string>
    <string name="delete_playlist">Delete Playlist?</string>
    <string name="rename_playlist">Rename Playlist</string>
    <string name="combine_two_strings" translatable="false">%1$s | %2$s</string>
    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="search_library">Search Library</string>
    <string name="search">Search</string>
    <string name="enabled">Enabled</string>
    <string name="settings">Settings</string>
    <string name="playlist_deleted">Playlist deleted.</string>
    <string name="default_time">00:00</string>
    <string name="sleep_timer_set">Sleep timer set.</string>
    <string name="song_paused_by_sleep_timer">Song paused by sleep timer.</string>
    <string name="about">About</string>
    <string name="legal">Legal</string>
    <string name="sort">Sort</string>
    <string name="shuffle">Shuffle</string>
    <string name="display_song_added_in_last">Display songs added in last</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="genres">Genre</string>
    <string name="a_b_repeat_message">Drag the scrubbers to select the part of \n song you would like to repeat.</string>
    <string name="song_failed_to_load">Song failed to load.</string>
    <string name="unable_to_get_audio_focus">Unable to get audio focus.</string>
    <string name="song_title">Song Title</string>
    <string name="duration">Duration</string>
    <string name="date_added">Date Added</string>
    <string name="year">Year</string>
    <string name="done">Done</string>
    <string name="name">name</string>
    <string name="ascending">ASCENDING</string>
    <string name="descending">DESCENDING</string>
    <string name="enter_name">Enter Name</string>
    <string name="later">Later</string>
    <string name="reset">Reset</string>
    <string name="dismiss">Dismiss</string>
    <string name="stop">Stop</string>
    <string name="position">position</string>
    <string name="sorry_cant_play_this_audio">Sorry cant play this audio!</string>
    <string name="file_deleted">Files Deleted!</string>
    <string name="folder_could_not_be_deleted">Folder can not be deleted!!</string>
    <string name="file_could_not_be_deleted">File cant not be deleted!</string>
    <string name="enter_preset_name">Please enter preset name!</string>
    <string name="sd_access">You need to grant SD card access to Boom to modify contents on external SD card.\n</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="repeat_song_instruction">Drag the scrubbers to select the part of the song you would like to repeat.</string>
    <string name="auto_playlist">Auto Playlist</string>
    <string name="recently_added">Recently Added</string>
    <string name="favorites">Favorites</string>
    <string name="top_played">Top Played</string>
    <string name="recently_played">Recently Played</string>
    <string name="count_song"><xliff:g id="count">%d</xliff:g> song</string>
    <string name="count_songs"><xliff:g id="count">%d</xliff:g> songs</string>
    <string name="count_album"><xliff:g id="count">%d</xliff:g> album</string>
    <string name="count_albums"><xliff:g id="count">%d</xliff:g> albums</string>
    <string name="count_artist"><xliff:g id="count">%d</xliff:g> artist</string>
    <string name="count_artists"><xliff:g id="count">%d</xliff:g> artists</string>
    <string name="play">Play</string>
    <string name="pause_on_disconnect">Pause on Disconnect</string>
    <string name="pause_desc">Pauses playback when headset is disconnected</string>
    <string name="resume_on_disconnect">Resume on Connect</string>
    <string name="play_desc">Resumes playback when headset is connected</string>
    <string name="action_search">Search</string>
    <string name="options">Options</string>
    <string name="empty_playlist">Empty playlist</string>
    <string name="clear_recently_played">Clear recently played list?</string>
    <string name="clear_recently_played_long">All songs from the recently played list will be cleared.</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="clear_top_played">Clear top played</string>
    <string name="edit_weeks">Edit weeks</string>
    <string name="sorry_your_phone_does_not_support_equalizer">Sorry your phone does not support equalizer</string>
    <string name="set_ringtone">Set Ringtone</string>
    <string name="write_settings_desc">Music player requires permission to \'Write Settings\' in order to set your ringtone.\n\n After granting permission, try setting your ringtone again.</string>
    <string name="songs_added_to_queue">songs added to queue.</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="title_activity_setting">Settings</string>
    <string name="use_as_phone_ringtone">Use As Ringtone</string>
    <string name="share">Share</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_us_message">If you enjoy using this app, you mind taking a moment to rate it? Ite wont take more than a minute. Thank you for your support!</string>
    <string name="a_b_repeat">A-B Repeat</string>
    <string name="repeat"> Repeat</string>
    <string name="sort_song_name">Song Name</string>
    <string name="sort_default">Default</string>
    <string name="sort_artist_name">Artist Name</string>
    <string name="sort_album_name">Album Name</string>
    <string name="sort_date_added_name">Date Added</string>
    <string name="sort_song_year_name">Song Year</string>
    <string name="sort_song_duration_name">Song Duration</string>
    <string name="sort_track_no_name">Track #</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_no_of_songs"># Of Songs</string>
    <string name="sort_no_of_albums"># Of Albums</string>
    <string name="sort_file_name">File Name</string>
    <string name="edit_tags">Edit tags</string>
    <string name="to_grant_access">To grant access : \n</string>
    <string name="permission_line_one">- Click the 3-dots menu icon on the  following dialog and select \'Show SD card\'</string>
    <string name="permission_line_two">- Tap the navigation icon on the left then  select desired storage device you want to   grant access to , typically \'SD Card\'.</string>
    <string name="permission_line_three">- Tap \'Select\' button at the bottom.</string>
    <string name="permission_line_four">(Make sure you choose Root directory of   the storage)</string>
    <string name="permission_line_five">Do you want to grant SD card access to Boom Player ?</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="delete">Delete</string>
    <string name="Search">Search</string>
    <string name="music_library">Music Library</string>
    <string name="rebuild_music_library">Rebuild Music Library</string>
    <string name="scan_frequency">Scan Frequency</string>
    <string name="appearance">Appearance</string>
    <string name="appearance_description">Change the app\'s settings, default tabs and more.</string>
    <string name="album_art_description">Download, Modify albums art and artists art.</string>
    <string name="audio_settings_description">Configure crossfade, headphone plug actions and toggle equalizer.</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="music_folders_description">Rebuild your music library and change selected music folders.</string>
    <string name="about_description">About the app, open source licenses, and contact information.</string>
    <string name="licenses_and_about"><![CDATA[Licenses & About]]></string>
    <string name="scrobbling_description">Choose to scrobble.</string>
    <string name="scrobbling">Scrobble</string>
    <string name="application_theme">Application Theme</string>
    <string name="app_theme_description">Create app\'s custom theme.</string>
    <string name="default_browser">Default Browser</string>
    <string name="default_browser_description">Pick the default browser to display when app starts.</string>
    <string name="tabs">Tabs</string>
    <string name="choose_tab_items">Rearrange tab item of the library.</string>
    <string name="rebuild_music_library_des">Build the music library if you have added new songs in your phone.</string>
    <string name="scan_frequency_desc">Scan and stay updated with the new music</string>
    <string name="licenses_about"><![CDATA[Licenses & about]]></string>
    <string name="licenses">Licenses</string>
    <string name="contact_us">Contact Us</string>
    <string name="album_art">Album Art</string>
</resources>