<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_line_number_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd_access"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/text_line_number_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_grant_access"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_line_number_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_line_one"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/text_line_number_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_line_two"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/text_line_number_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/permission_line_three"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/text_line_number_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/permission_line_four"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_line_number_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_line_five"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
</RelativeLayout>